# NetDB-Orientation

./: README.md  package-lock.json
Exercise_1/: index.html  script.js
Exercise_2/: package-lock.json
Exercise_2/src/: template.html
Exercise_2/todo_list/: package-lock.json  package.json
Exercise_2/todo_list/src/: index.js  styles.css  template.html
Exercise_2/webpack_practice/: package-lock.json  webpack.config.js
Exercise_2/webpack_practice/modules/: home.js
Exercise_2/webpack_practice/src/: index.js  template.html
Exercise_3/: docker-compose.yml
Exercise_3/fastapi_backend/: .dockerignore  Dockerfile  check_db.py  create_test_data.py  pyproject.toml  view_data.py
Exercise_3/fastapi_backend/alembic/: env.py
Exercise_3/fastapi_backend/app/: main.py
Exercise_3/guide/: docker_guide.md  frontend_guide.md
Exercise_3/react_todo/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
Exercise_3/react_todo/src/: App.css  (+1 more)
Exercise_Backend/: .gitignore  alembic.ini  check_table.py  insert_users.py  pyproject.toml  verify_users.py
Exercise_Backend/app/: main.py
Exercise_Backend/app/auth/: dependencies.py  jwt_handler.py
Exercise_Backend/app/database/: config.py
Exercise_Backend/app/models/: user.py
Exercise_Backend/frontend/: .gitignore
Exercise_Backend/frontend/public/: index.html  manifest.json
Exercise_Backend/frontend/src/: App.js  BackendDemo.js
Exercise_Backend/guide/: backend_guide.md
Exercise_Backend/migrations/: env.py
Exercise_Backend/migrations/versions/: b759ae865e8c_create_users_table.py
(+29 files in other folders)
